--- a/code.html
+++ b/code.html
@@ -7,5 +7,7 @@
 </head>
 <body>
     <h1>hello this my new changes</h1>
+
+    this is the changes made for the question three changes
 </body>
 </html>
