for the conflict

--- a/code.html
+++ b/code.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>hello this my new changes</h1>
+    <h1>to create a new conflict </h1>
 
     this is the changes made for the question three changes
 </body>
